--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: flex-start;
+  align-items: center;
 }
 
 #es-neo.es-neo .es-benefits__txt {
@@ -229,7 +230,8 @@
 }
 
 #es-neo.es-neo .es-benefits__icon {
-  width: 90px;
+  width: 80px;
+  padding-bottom: 32px;
 }
 
 #es-neo.es-neo .es-benefits__picture {
@@ -493,7 +495,7 @@
     font-size: 18px;
   }
   #es-neo.es-neo .es-benefits__icon {
-    width: 80px;
+    width: 120px;
   }
   #es-neo.es-neo .es-benefits__item {
     gap: 16px;
